--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4873,12 +4873,17 @@ TAKE_SPECTRUM:  TOBS(-7:7)     TEXPOSE_ZPOLY(600,200,-3)
 TAKE_SPECTRUM:  TREST(0:2)     TEXPOSE_ZPOLY(1000) 
 TAKE_SPECTRUM:  TREST(10:12)   TEXPOSE_ZPOLY(1500:2500,500)
 TAKE_SPECTRUM:  HOST           TEXPOSE_ZPOLY(1200) 
+
+TAKE_SPECTRUM:  MJD(59400:59407)    TEXPOSE_ZPOLY(1200)   # random within week
+TAKE_SPECTRUM:  MJD(59400:59600,20) TEXPOSE_ZPOLY(1200)   # spectrum every 20 days
 \end{Verbatim}
 %
 Each {\tt TREST} argument defines a 2-day rest-frame window from 
 which to randomly select a \spec\ MJD.
 The {\tt TOBS} argument defines a 2-week observer-frame window 
 from which to randomly select a \spec\ MJD.
+The {\tt MJD} argument defines either 
+i) a pre-defined calendar window, or ii) a pre-defined calendar sequence.
 The {\tt TEXPOSE\_ZPOLY} key defines the exposure time (seconds) 
 as a polynomial function of redshift. 
 The {\tt TREST} exposure times are 
@@ -4886,6 +4891,7 @@ $2000+500z$~sec (10-12 days before peak),
 $600+200z-3z^2$~sec ($7$ days before peak),
 $1000$~sec (near-peak),
 $[1500:2500]+500z$~sec (10-12 days after peak).
+
 The values in parentheses can be float or integer: 
 e.g., {\tt TREST(-2.5:2.5)}. Beware that no blank
 spaces are allowed inside the (). The colon separates
@@ -4899,30 +4905,9 @@ Finally, the {\tt HOST} argument results in a host spectrum
 based on {\tt HOSTLIB\_FILE} and {\tt HOSTLIB\_SPECBASIS\_FILE}.
 HOST spectra have {\tt MJD = -9} in the data files.
 
-\begin{Verbatim}[frame=single]
-# 1) rest-frame epoch, rest-frame SNR def
-TAKE_SPECTRUM:  TREST(-12:-10) SNR_ZPOLY(20,-5)  SNR_LAMREST(5000:6000)
-TAKE_SPECTRUM:  TREST(0:2)     SNR_ZPOLY(20)     SNR_LAMREST(5000:6000)
-TAKE_SPECTRUM:  TREST(10:12)   SNR_ZPOLY(20,-2)  SNR_LAMREST(5000:6000)
-
-# 2) obs-frame window, rest-frame SNR def
-TAKE_SPECTRUM:  TOBS(-7:7)      SNR_ZPOLY(20)    SNR_LAMREST(5000:6000)
-
-# 3) rest-frame epoch, obs-frame SNR def
-TAKE_SPECTRUM:  TREST(-3:3)    SNR_ZPOLY(20)   SNR_LAMOBS(8000:10000)
-TAKE_SPECTRUM:  TREST(-3:3)    SNR_ZPOLY(20)   SNR_LAMOBS(13000:15000)
-
-#4) host spectrum 
-TAKE_SPECTRUM   HOST           SNR_ZPOLY(20)   SNR_LAMOBS(3000:5000)
-TAKE_SPECTRUM_HOSTFRAC:   0.1  # add 10\% of FLAM(host) to each SN spectrum
-TAKE_SPECTRUM_HOSTSNFRAC: 0.1  # scale FLAM(HOST) so Sum(HOST)/Sum(SNPEAK) = 0.1
-
-TAKE_SPECTRUM:  TEMPLATE_TEXPOSE_SCALE(1.2)
-\end{Verbatim}
-%
 
 The template exposure time is defined in the \simlib\ file
-with the key {\tt TEMPLATE\_TEXPOSE\_SPECTROGRAPH}.
+with the key \\ {\tt TEMPLATE\_TEXPOSE\_SPECTROGRAPH}.
 
 \medskip
 \noindent Rather than pre-defining exposure times, the exposure
@@ -4946,6 +4931,29 @@ information is automatically added to the {\tt SIMGEN\_DUMP}
 file (\S\ref{sss:simgen_dump}).
 This allows checking $\Texpose$ vs. redshift, or vs
 any other quantity allowed in the one-row-per-SN summary.
+
+\clearpage
+\begin{Verbatim}[frame=single]
+# 1) rest-frame epoch, rest-frame SNR def
+TAKE_SPECTRUM:  TREST(-12:-10) SNR_ZPOLY(20,-5)  SNR_LAMREST(5000:6000)
+TAKE_SPECTRUM:  TREST(0:2)     SNR_ZPOLY(20)     SNR_LAMREST(5000:6000)
+TAKE_SPECTRUM:  TREST(10:12)   SNR_ZPOLY(20,-2)  SNR_LAMREST(5000:6000)
+
+# 2) obs-frame window, rest-frame SNR def
+TAKE_SPECTRUM:  TOBS(-7:7)      SNR_ZPOLY(20)    SNR_LAMREST(5000:6000)
+
+# 3) rest-frame epoch, obs-frame SNR def
+TAKE_SPECTRUM:  TREST(-3:3)    SNR_ZPOLY(20)   SNR_LAMOBS(8000:10000)
+TAKE_SPECTRUM:  TREST(-3:3)    SNR_ZPOLY(20)   SNR_LAMOBS(13000:15000)
+
+#4) host spectrum 
+TAKE_SPECTRUM   HOST           SNR_ZPOLY(20)   SNR_LAMOBS(3000:5000)
+TAKE_SPECTRUM_HOSTFRAC:   0.1  # add 10\% of FLAM(host) to each SN spectrum
+TAKE_SPECTRUM_HOSTSNFRAC: 0.1  # scale FLAM(HOST) so Sum(HOST)/Sum(SNPEAK) = 0.1
+
+TAKE_SPECTRUM:  TEMPLATE_TEXPOSE_SCALE(1.2)
+\end{Verbatim}
+
 
 \medskip
 \newcommand{\scaleFlamHost}{S_{\rm host}}
