add SIMGEN_DUMPALL SWITCH

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -6169,6 +6169,11 @@ can be printed to the screen by specifying zero variables as follows:
 %
 After printing the valid variable names, the program quits.
 
+To switch from {\tt SIMGEN\_DUMP} (in the input file) 
+to {\tt SIMGEN\_DUMPALL} via command line arg,
+\begin{verbatim}
+   snlc_sim.exe mysim.input SIMGEN_DUMPALL SWITCH
+\end{verbatim}
 
 % ------------------------------------
    \subsubsection{ Model Dump }
